// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamicList append item 1`] = `
"<ul>
    <li>John</li>
    <li>Jane</li>
    <li>Bob</li>
</ul>"
`;

exports[`dynamicList change order 1`] = `
"<ul>
    <li>Jane</li>
    <li>John</li>
</ul>"
`;

exports[`dynamicList create a list of child nodes 1`] = `
"<ul>
    <li>John</li>
    <li>Jane</li>
</ul>"
`;

exports[`dynamicList insert item 1`] = `
"<ul>
    <li>John</li>
    <li>Jane</li>
    <li>Bob</li>
</ul>"
`;

exports[`dynamicList pop item 1`] = `
"<ul>
    <li>John</li>
</ul>"
`;

exports[`dynamicList updating a property of a member 1`] = `
"<ul>
    <li>Ben</li>
    <li>Jane</li>
</ul>"
`;
